--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,11 @@ services:
     restart: unless-stopped
     command:
       "python3 downloader.py"
+
+  elk_producer_1:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    command:
+      "python3 elk_producer.py"
