--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ backoff==2.2.1
 beautifulsoup4==4.12.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
+dostoevsky==0.6.0
 elastic-transport==8.4.0
 elasticsearch==8.7.0
 frozenlist==1.3.3
